# sphericalrht

./: .gitignore  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: make.bat
docs/source/: conf.py  index.rst  sphericalrht.CubeAndStokes.rst  sphericalrht.spherical_rht.rst  sphericalrht.utils.rst
src/sphericalrht/: .spherical_rht.py.swp  __init__.py  spherical_rht.py  utils.py
tests/: __init__.py  test_spherical_rht.py  test_utils.py
tests/data/: IQU_test_map_nside2_wlen75_fwhm30.0_thresh0.7_norients6.fits  test_map.fits  test_map_nside2_wlen75_fwhm30.0_thresh0.7_norients6.h5
