[metadata]
name = sphericalrht
version = 2.0.0
author = George Halal
author_email = halalgeorge@gmail.com
description = Spherical implementation of the Rolling Hough Transform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/georgehalal/sphericalrht
project_urls =
    Bug Tracker = https://github.com/georgehalal/sphericalrht/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    psutil>=5.8
    healpy>=1.15
    numpy>=1.20
    ducc0>=0.20
    h5py>=3.3

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
sphericalrht = py.typed

[flake8]
max-line-length = 79
